# bsa-rs

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: cargo_deny.yml  deploy_docs.yml  main_ci.yml
ba2/: all.html  enum.CompressionResult.html  enum.FileFormat.html  fn.guess_format.html  index.html  sidebar-items.js  struct.BStr.html  struct.BString.html  struct.Borrowed.html  struct.Copied.html  trait.ByteSlice.html  trait.ByteVec.html  trait.CompressableFrom.html  trait.Reader.html  trait.ReaderWithOptions.html
ba2/fo4/: enum.CompressionFormat.html  enum.CompressionLevel.html  enum.Error.html  enum.FileHeader.html  enum.Format.html  enum.Version.html  fn.hash_file.html  fn.hash_file_in_place.html  index.html  sidebar-items.js  struct.Archive.html  struct.ArchiveKey.html  struct.ArchiveOptions.html  struct.ArchiveOptionsBuilder.html  struct.Chunk.html  struct.ChunkCompressionOptions.html  struct.ChunkCompressionOptionsBuilder.html  struct.DX10Header.html  struct.File.html  struct.FileCapacityError.html  struct.FileHash.html  struct.FileReadOptions.html  struct.FileReadOptionsBuilder.html  struct.FileWriteOptions.html  struct.FileWriteOptionsBuilder.html  struct.GNMFHeader.html  struct.Hash.html  type.Result.html
ba2/guess/: enum.FileFormat.html  fn.guess_format.html
ba2/prelude/: index.html
ba2/tes3/: enum.Error.html  index.html  (+9 more)
src/: cc.rs  containers.rs  derive.rs  guess.rs  hashing.rs  io.rs  lib.rs  protocols.rs  strings.rs  tes3.rs  tes4.rs
(+202 files in other folders)
