[package]
edition = "2021"
name = "bsa"
publish = false
version = "0.1.0"

[dependencies]
bitflags = "2.4.1"
bstr = "1.7.0"
flate2 = {version = "1.0.28", default-features = false, features = ["any_zlib"]}
lzzzz = "1.0.4"
memmap2 = "0.9.0"
thiserror = "1.0.50"

[dev-dependencies]
anyhow = "1.0.75"
walkdir = "2.4.0"

[features]
default = ["flate2/zlib"]
